JumpScript/tests/cases/compiler/es6ImportNameSpaceImportNoNamedExports.jump
// @target: es5
// @module: commonjs

// @filename: es6ImportNameSpaceImportNoNamedExports_0.jump
var a = 10;
export = a;

// @filename: es6ImportNameSpaceImportNoNamedExports_1.jump
import * as nameSpaceBinding from "./es6ImportNameSpaceImportNoNamedExports_0"; // error